# reindexer

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  appveyor.yml  bench_compare.html  bindings.go  changelog.md  dependencies.sh  describer.go  describer_test.go  embedders_api.yaml  expression.go  float_vector.md  ftfastconfig.go  ftfuzzyconfig.go  fulltext.md  function.go  go.mod  go.sum  hybrid.md  iterator.go  prometheus.go  query.go  query_builder_bench_test.go  query_test.go  readme.md  reflect.go  reindexer.go  reindexer_bench_test.go  reindexer_impl.go  reindexer_perf_bench_test.go  reindexer_test.go  replication.md  result_serializer.go  serializer.go  setup.py  sharding.md  (+3 more)
clang-tidy/custom_checks/: CMakeLists.txt
clang-tidy/custom_checks/src/: lambda_check.cc  lambda_check.h  nodiscard_check.cc  nodiscard_check.h  noexcept_throw_call_check.cc  noexcept_throw_call_check.h  rx_module.cc  rx_module.h
cmd/reindexer_tool/: CMakeLists.txt  Makefile  reindexer_tool.cc
connectors/py_reindexer/: CMakeLists.txt  README.md  readmegen.sh
cpp_src/: .depend  CMakeLists.txt  Makefile  libreindexer.mri  libreindexer.pc.in  readme.md  reindexer-config-version.cmake.in  reindexer-config.cmake.in
cpp_src/client/: connectionspool.h  connectopts.h  coroqueryresults.cc  coroqueryresults.h  cororeindexer.cc  cororeindexer.h  cororeindexerconfig.h  cororpcclient.cc  cororpcclient.h  corotransaction.cc  corotransaction.h  inamespaces.h  internalrdxcontext.h  item.cc  item.h  itemimpl.cc  itemimpl.h  itemimplbase.cc  itemimplbase.h  namespace.cc  namespace.h  queryresults.cc  queryresults.h  raftclient.cc  raftclient.h  reindexer.cc  reindexer.h  reindexerconfig.h  reindexerimpl.cc  reindexerimpl.h  resultserializer.cc  resultserializer.h  rpcclient.cc  rpcclient.h  rpcclientmock.cc  rpcclientmock.h  rpcformat.h  snapshot.cc  snapshot.h  synccoroqueryresults.cc  (+10 more)
cpp_src/cluster/: async_replication.conf  cluster.conf  clustercontrolrequest.cc  clustercontrolrequest.h  clusterizator.cc  clusterizator.h  config.cc  config.h  consts.h  datareplicator.cc  datareplicator.h  idatareplicator.h  insdatareplicator.h  logger.cc  logger.h  raftmanager.cc  raftmanager.h  replication.conf  shardedqueue.h  sharedsyncstate.h  updaterecord.cc  updaterecord.h
cpp_src/cluster/sharding/: ranges.h  (+11 more)
cpp_src/cmake/: cmake_uninstall.cmake.in
cpp_src/core/: activity.cc  activity.h  activity_context.cc  activity_context.h  activitylog.cc  activitylog.h  aggregator.cc  aggregator.h  cancelcontextpool.h  clusterproxy.cc  clusterproxy.h  clustrerproxy.cc  comparator.cc  comparator.h  comparatorimpl.h  compositearraycomparator.cc  compositearraycomparator.h  dbconfig.cc  dbconfig.h  defnsconfigs.h  enums.cc  enums.h  expressiontree.cc  expressiontree.h  expressiontree.md  fieldrefimpl.cc  fieldrefimpl.h  iclientsstats.cc  iclientsstats.h  id_type.h  idset.cc  idset.h  idsetcache.h  indexdef.cc  indexdef.h  indexopts.cc  indexopts.h  item.cc  item.h  itemimpl.cc  (+58 more)
cpp_src/coroutine/: channel.h  coroutine.cc  coroutine.h  index_list.h  mutex.h  routine_t.h  tokens_pool.h  waiters_queue.h  waitgroup.h
cpp_src/debug/: allocdebug.cc  allocdebug.h  allocdebug_fake.cc  backtrace.cc  backtrace.h  crashqueryreporter.cc  crashqueryreporter.h  resolver.cc  resolver.h  terminate_handler.cpp  terminate_handler.h
cpp_src/doc/: CMakeLists.txt  Doxyfile  Doxyfile-mcss  Doxyfile-mcss.in  mainpage.dox
cpp_src/estl/: algorithm.h  atomic_unique_ptr.h  cbuf.h  charset.h  chunk.h  chunk_buf.h  comparation_result.h  concepts.h  condition_variable.h  contexted_cond_var.h  contexted_locks.h  cow.h  debug_macros.h  defines.h  dummy_mutex.h  dynamic_bitset.h  elist.h  expected.h  extendible_hash_map.h  fast_hash_map.h  fast_hash_set.h  fast_hash_traits.h  flat_str_map.h  forward_like.h  gift_str.h  h_vector.h  heapify.h  intrusive_ptr.h  lazy_deque.h  lock.h  lock_guard.h  marked_mutex.h  membuf.h  multi_unique_lock.h  multihash_map.h  multihash_set.h  mutex.cc  mutex.h  mutex_details.h  one_of.h  (+30 more)
cpp_src/events/: iexternal_listener.h  listener.cc  listener.h  observer.cc  observer.h  serializer.h  subscriber_config.cc  subscriber_config.h
cpp_src/gtests/: helpers.h  tools.h  tsan.suppressions
cpp_src/net/: connectinstatscollector.cc  connectinstatscollector.h  connection.cc  connection.h  iconnection.h  iserverconnection.h  listener.cc  listener.h  manualconnection.cc  manualconnection.h  socket.cc  socket.h  stat.cc  stat.h
cpp_src/replicator/: replication.conf  replicator.cc  replicator.h  updatesobserver.cc  updatesobserver.h  walrecord.cc  walrecord.h  walselecter.cc  walselecter.h  waltracker.cc  waltracker.h
cpp_src/replv3/: updatesobserver.cc  updatesobserver.h
cpp_src/server/: CMakeLists.txt  authmanager.cc  authmanager.h  clientsstats.cc  clientsstats.h  config.cc  config.h  dbmanager.cc  dbmanager.h  httpserver.cc  httpserver.h  libreindexer_server.pc.in  loggerwrapper.h  outputparameters.h  pidfile.h  reindexerservice.cc  reindexerservice.h  resources_wrapper.cc  resources_wrapper.h  rpcqrwatcher.cc  rpcqrwatcher.h  rpcserver.cc  rpcserver.h  rpcupdatespusher.cc  rpcupdatespusher.h  server.cc  server.h  serverimpl.cc  serverimpl.h  winservice.cc  winservice.h
cpp_src/tools/: assertrx.cc  assertrx.h  blas_extension.cc  blas_extension.h  catch_and_return.h  clock.h  clusterproxyloghelper.h  compare.h  compiletimemap.h  cpucheck.cc  cpucheck.h  crypt.h  customhash.cc  customhash.h  customlocal.cc  customlocal.h  dsn.cc  dsn.h  enum_compare.h  errors.cc  errors.h  filecontentwatcher.h  filemtimechecker.h  flagguard.h  float_comparison.h  frozen_str_tools.h  fsops.cc  fsops.h  gallop_search.h  hardware_concurrency.h  json2kv.cc  json2kv.h  jsonstring.h  jsontools.cc  jsontools.h  logger.cc  logger.h  logginglongqueries.cc  logginglongqueries.h  lsn.cc  (+47 more)
cpp_src/updates/: updaterecord.cc  updaterecord.h  updatesqueue.h
cpp_src/wal/: walrecord.cc  walrecord.h  walselecter.cc  walselecter.h  waltracker.cc  waltracker.h
samples/cpp/: CMakeLists.txt  builtin_sample.cc  cproto_sample.cc
(+1445 files in other folders)
